--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,13 @@ android:weightSum="2">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Location"
+        android:id="@+id/buttonLoc"
+        android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="START"
         android:id="@+id/button"
         android:layout_gravity="center_horizontal" />
