--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
-tools:context=".MainActivity"
+tools:context=".View.MainActivity"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
@@ -29,15 +29,24 @@ android:weightSum="2">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sensors Start"
+            android:text="Sense Start"
             android:id="@+id/buttonLoc"
-            android:layout_weight="1.05" />
+            android:layout_weight="0.3" />
 
         <Button
-            android:layout_width="204dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SERVER SEND START"
+            android:layout_weight="0.3"
+            android:text="Send Start"
             android:id="@+id/button" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="Settings"
+            android:id="@+id/settbutton" />
+
     </LinearLayout>
 
     <TextView
@@ -55,7 +64,8 @@ android:weightSum="2">
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.17"
-        android:textAlignment="center">
+        android:textAlignment="center"
+        android:weightSum="1">
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -72,6 +82,7 @@ android:weightSum="2">
             android:id="@+id/requestscheck"
             android:checked="true"
             android:clickable="true" />
+
     </LinearLayout>
 
 </LinearLayout>
