--- a/app/src/main/res/layout/activity_stakeholders.xml
+++ b/app/src/main/res/layout/activity_stakeholders.xml
@@ -3,7 +3,7 @@
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
-tools:context=".View.MainActivity"
+tools:context=".View.StakeholdersActivity"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
@@ -52,16 +52,21 @@ android:weightSum="2">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="bottom"
-        android:textAlignment="center">
+        android:weightSum="1">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/myRadioGroup"
-            android:layout_marginTop="10dp"
-            android:id="@+id/chooseBtn"
-            android:text="Send" />
+            android:text="Update"
+            android:id="@+id/updateStakeButton"
+            android:layout_weight="0.5" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Send Preferences"
+            android:id="@+id/sendStakeButton" />
 
     </LinearLayout>
 
